    * 0131 FIX: Error rates for network interfaces can now be set smaller then 0.1 when using Wato....
    * 0690 FIX: Fix language jumping to German when saving user profiles
    * 0666 FIX: Minimum port for the mknotifyd is now 1024 (never use well known ports)...
    * 0559 FIX: WATO snapshots: improved validation of (uploaded) snapshots...

    Notifications:
    * 0362 sms: now searching PATH for sendsms and smssend commands...
    * 0684 New notification variables NOTIFY_LASTSERVICEOK and NOTIFY_LASTHOSTUP...
    * 0108 FIX: Prevent service notification on host alerts...
    * 0058 FIX: Fix email notifications containing non-ASCII characters in some situtations...
    * 0133 FIX: Fixed mkeventd notification plugin...
    * 0720 FIX: Fix timeperiod computation with CMC and flexible notifications...

    BI:
    * 0669 FIX: Fixed regex matching in BI when using character groups [...]...

    Reporting & Availability:
    * 0018 New option for displaying a legend for the colors used in the timeline...
    * 0405 Add CSV export to availability views...
    * 0338 FIX: Introduce time limit on availability queries...
    * 0681 FIX: Display correct year for availability range for last month in january

    Event Console:
    * 0301 Handling messages of special syslog format correctly...
    * 0388 Moved Event Console related settings to own settings page...
    * 0303 FIX: Old log entries were shown in event history first...
    * 0304 FIX: Escaping several unwanted chars from incoming log messages...
    * 0089 FIX: CSV export of event console was broken...
    * 0359 FIX: Fixed exception in event simulator when one match group did not match
    * 0384 FIX: Trying to prevent problem when restarting mkeventd...
    * 0427 FIX: Fixed exception when handling connections from event unix socket...
    * 0679 FIX: Allow non-Ascii characters in generated events
    * 0680 FIX: Do not allow spaces in host names in event simulator...