@@ -1,0 +1,9 @@
+Title: Fix NoneType has not attribute userdb_automatic_sync bug in D-WATO
+Level: 1
+Component: wato
+Class: fix
+State: unknown
+Version: 1.2.5i1
+Date: 1393836538
+
+
