@@ -297,6 +297,7 @@
     * 0690 FIX: Fix language jumping to German when saving user profiles
     * 0666 FIX: Minimum port for the mknotifyd is now 1024 (never use well known ports)...
     * 0559 FIX: WATO snapshots: improved validation of (uploaded) snapshots...
+    * 0709 FIX: Fix NoneType has not attribute userdb_automatic_sync bug in D-WATO
 
     Notifications:
     * 0362 sms: now searching PATH for sendsms and smssend commands...
